# Nuvoton-Elevator-Counting

./: .gitignore  README.md
data/: coco.yaml  dataset.yaml  train.txt  val.txt
data/labels/: val.cache
models/: TristaOverhead200epBest_full_integer_quant_vela.tflite  best_full_integer_quant.tflite
repos/m55m1-ElevatorCounting-YOLOv8n/: .gitignore  BoardInit.cpp  DetectionResult.hpp  ModelFileReader.c  ModelFileReader.h  Overhead_PersonDetection_Colab.ipynb  YOLOv8nODPostProcessing.cpp  YOLOv8nODPostProcessing.hpp  check_model_outputs.py  ffconf_M55M1.h  install.py  install_old.py  main.cpp  outputs_details.txt
repos/m55m1-ElevatorCounting-YOLOv8n/Device/ImageSensor/: ImageSensor.c
repos/m55m1-ElevatorCounting-YOLOv8n/Device/SDCard/: sdglue.c
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/: .clangd  M55M1.scatter  Nu_Link_Driver.ini  ObjectDetection.cbuild-idx.yml  ObjectDetection.cbuild-pack.yml  ObjectDetection.cbuild-set.yml  ObjectDetection.cproject.yml  ObjectDetection.csolution.yml  ObjectDetection.uvguix.jimmy  ObjectDetection.uvoptx  ObjectDetection.uvprojx
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/Listings/: ObjectDetection.map  boardinit.i  boardinit.lst  car.i  car.lst  ccap.i  ccap.lst  clk.i  clk.lst  descriptors.i  descriptors.lst  dinner.i  dinner.lst  diskio_sdh.i  diskio_sdh.lst  display.i  display.lst  drv_pdma.i  drv_pdma.lst  ebi.i  ebi.lst  ethosu_cpu_cache.i  ethosu_cpu_cache.lst  ethosu_device_u55_u65.i  ethosu_device_u55_u65.lst  ethosu_driver.i  ethosu_driver.lst  ethosu_npu_init.i  ethosu_npu_init.lst  ethosu_pmu.i  ethosu_pmu.lst  ethosu_profiler.i  ethosu_profiler.lst  ff.i  ff.lst  ffunicode.i  ffunicode.lst  font8_16.i  font8_16.lst  gpio.i  (+53 more)
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/Objects/: ObjectDetection.axf  ObjectDetection.build_log.htm  ObjectDetection.htm  ObjectDetection.lnp  ObjectDetection_ObjectDetection.dep  boardinit.d  car.d  ccap.d  clk.d  descriptors.d  dinner.d  diskio_sdh.d  display.d  drv_pdma.d  ebi.d  ethosu_cpu_cache.d  ethosu_device_u55_u65.d  ethosu_driver.d  ethosu_npu_init.d  ethosu_pmu.d  ethosu_profiler.d  ff.d  ffunicode.d  font8_16.d  gpio.d  hsusbd.d  hyperram_code.d  imagesensor.d  inputfiles.d  labels.d  lcd_fsa506.d  lcd_ili9341.d  lcd_lt7381.d  main.d  model.d  modelfilereader.d  pdma.d  platformmath.d  pmu_counter.d  profiler.d  (+15 more)
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/tmp/ObjectDetection+ObjectDetection/: CMakeLists.txt  groups.cmake  toolchain.cmake
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/tmp/ObjectDetection+ObjectDetection/src/ObjectDetection+ObjectDetection-stamp/: ObjectDetection+ObjectDetection-configure-.cmake  ObjectDetection+ObjectDetection-database-.cmake  ObjectDetection+ObjectDetection-source_dirinfo.txt
repos/m55m1-ElevatorCounting-YOLOv8n/KEIL/tmp/ObjectDetection+ObjectDetection/tmp/: ObjectDetection+ObjectDetection-cfgcmd.txt  ObjectDetection+ObjectDetection-mkdirs.cmake
repos/m55m1-ElevatorCounting-YOLOv8n/Model/: Labels.cpp  YOLOv8n-elevator-od.tflite  YOLOv8nODModel.cpp
repos/m55m1-ElevatorCounting-YOLOv8n/Model/include/: YOLOv8nODModel.hpp
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/: README.md  dg_export.py  dg_train.py  dg_val.py  download_hf_dataset.py  generate_calib_data.py  nu_export_tflite_int8.py  pyproject.toml  requirements_onnx.txt  yolov8n_convert.bat
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/ultralytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/ultralytics/cfg/models/v8/: relu6-yolov8.yaml
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/ultralytics/nn/: tasks.py
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/vela/: gen_model_cpp.bat  variables.bat  variables_no_vela.bat
repos/m55m1-ElevatorCounting-YOLOv8n/yolov8_ultralytics/vela/Tool/tflite2cpp/templates/: tflite.cc.template
